// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegionButton should display a default RegionButton with correct styling 1`] = `
<View
  accessibilityLabel="Australia Weekend - Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderColor": "#DCDCDC",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "paddingBottom": 32,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 13,
        "width": 75,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GTGuardianTitlepiece-Bold",
            "fontSize": 30,
            "lineHeight": 33,
          },
          Object {
            "color": "#052962",
            "fontFamily": "GTGuardianTitlepiece-Bold",
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": 5,
          },
        ]
      }
    >
      Australia Weekend
    </Text>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextSans-Regular",
            "fontSize": 15,
            "lineHeight": 18,
          },
          Object {
            "color": "#333333",
          },
          Object {
            "color": "#121212",
            "flexWrap": "wrap",
            "paddingRight": 20,
          },
        ]
      }
    >
      Published every Saturday by 6am (AEST)
    </Text>
  </View>
</View>
`;

exports[`RegionButton should display a selected RegionButton with correct styling 1`] = `
<View
  accessibilityLabel="Australia Weekend - Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderColor": "#052962",
      "borderRadius": 3,
      "borderWidth": 4,
      "flexDirection": "row",
      "paddingBottom": 32,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 13,
        "width": 75,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GTGuardianTitlepiece-Bold",
            "fontSize": 30,
            "lineHeight": 33,
          },
          Object {
            "color": "#052962",
            "fontFamily": "GTGuardianTitlepiece-Bold",
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": 5,
          },
        ]
      }
    >
      Australia Weekend
    </Text>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextSans-Regular",
            "fontSize": 15,
            "lineHeight": 18,
          },
          Object {
            "color": "#333333",
          },
          Object {
            "color": "#121212",
            "flexWrap": "wrap",
            "paddingRight": 20,
          },
        ]
      }
    >
      Published every Saturday by 6am (AEST)
    </Text>
  </View>
</View>
`;

exports[`SpecialEditionButton should display a default SpecialEditionButton with correct styling 1`] = `
<View
  accessibilityLabel="Food
Monthly - Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderColor": "#DCDCDC",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "paddingBottom": 32,
      "paddingTop": 14,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 13,
        "width": 75,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GTGuardianTitlepiece-Bold",
            "fontSize": 30,
            "lineHeight": 33,
          },
          Object {
            "color": "#FEEEF7",
            "fontFamily": "GHGuardianHeadline-Medium",
            "fontSize": 32,
            "lineHeight": 34,
            "marginBottom": 5,
          },
        ]
      }
    >
      Food
Monthly
    </Text>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextSans-Regular",
            "fontSize": 15,
            "lineHeight": 18,
          },
          Object {
            "color": "#333333",
          },
          Object {
            "color": "#121212",
            "flexWrap": "wrap",
            "paddingRight": 20,
          },
        ]
      }
    >
      Store cupboard special: 20 quick and easy lockdown suppers
    </Text>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextSans-Regular",
            "fontSize": 15,
            "lineHeight": 18,
          },
          Object {
            "color": "#333333",
          },
          Object {
            "color": "#121212",
            "flexWrap": "wrap",
            "paddingRight": 20,
          },
        ]
      }
    >
      Available until 
      2/1/1998
    </Text>
  </View>
</View>
`;

exports[`SpecialEditionButton should display a selected SpecialEditionButton despite correct styling 1`] = `
<View
  accessibilityLabel="Food
Monthly - Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderColor": "#052962",
      "borderRadius": 3,
      "borderWidth": 4,
      "flexDirection": "row",
      "paddingBottom": 32,
      "paddingTop": 14,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 13,
        "width": 75,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GTGuardianTitlepiece-Bold",
            "fontSize": 30,
            "lineHeight": 33,
          },
          Object {
            "color": "#FEEEF7",
            "fontFamily": "GHGuardianHeadline-Medium",
            "fontSize": 32,
            "lineHeight": 34,
            "marginBottom": 5,
          },
        ]
      }
    >
      Food
Monthly
    </Text>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextSans-Regular",
            "fontSize": 15,
            "lineHeight": 18,
          },
          Object {
            "color": "#333333",
          },
          Object {
            "color": "#121212",
            "flexWrap": "wrap",
            "paddingRight": 20,
          },
        ]
      }
    >
      Store cupboard special: 20 quick and easy lockdown suppers
    </Text>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextSans-Regular",
            "fontSize": 15,
            "lineHeight": 18,
          },
          Object {
            "color": "#333333",
          },
          Object {
            "color": "#121212",
            "flexWrap": "wrap",
            "paddingRight": 20,
          },
        ]
      }
    >
      Available until 
      2/1/1998
    </Text>
  </View>
</View>
`;
